--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "@types/history": "4.7.6",
     "@types/jest": "^26.0.15",
     "@types/jquery": "^3.5.5",
+    "@types/nedb": "^1.8.11",
     "@types/node": "14.14.10",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.9",
@@ -185,6 +186,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "history": "^5.0.0",
     "jquery": "^3.5.1",
+    "nedb": "^1.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
