--- a/package.json
+++ b/package.json
@@ -112,7 +112,6 @@
     "@types/node": "14.14.10",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.9",
-    "@types/react-router-dom": "^5.1.6",
     "@types/react-test-renderer": "^16.9.3",
     "@types/webpack-env": "^1.15.2",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
@@ -186,10 +185,11 @@
     "fluent-ffmpeg": "^2.1.2",
     "history": "^5.0.0",
     "jquery": "^3.5.1",
+    "mobx": "^6.1.8",
+    "mobx-react-lite": "^3.2.0",
     "nedb": "^1.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
     "react-toastify": "^7.0.3",
     "regenerator-runtime": "^0.13.5",
     "source-map-support": "^0.5.19",
